# Semia

./: .codecov.yml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADVANCED_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLE.md  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/scripts/: assemble_plugin_skills.py  build_zipapp.py  check_changelog.py  check_release_files.py  check_sdist_contents.py  package_build_check.py  precommit_bundle_plugins.sh  validate_plugin_manifests.py
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  lint.yml  release-check.yml  release.yml  scorecard.yml
.infer/: agents.yaml
.infer/agents/architect-agent/: agent.yaml
.infer/agents/dev-agent/: agent.yaml
.infer/agents/devops-agent/: agent.yaml
.infer/agents/qa-agent/: agent.yaml
build_backend/: semia_build.py
docs/: architecture.md  plugin-protocol.md  release.md  supply-chain.md
rules/sdl/: skill_dl_static_analysis.dl
tests/: __init__.py
tests/cli/: __init__.py  test_llm_adapter.py  test_recommendation.py  test_repair.py  test_semia_cli.py  test_semia_cli_integration.py
tests/core/: __init__.py  test_datalog_eval.py  test_detector_report.py  test_facts_checker_evidence.py  test_pipeline.py  test_prepare.py  test_repair.py  test_skill_corpus.py  test_stage1.py
tests/fixtures/: README.md
tests/fixtures/skills/noreplyboter/polymarket-all-in-one/scripts/: polymarket.py
tests/fixtures/skills/wolffan/security-check-skill/scripts/: scan_skill.py
