[build-system]
requires = []
build-backend = "semia_build"
backend-path = ["build_backend"]

[project]
name = "semia-skillscan"
version = "0.1.0"
description = "Skill Behavior Mapping for AI agent skill auditing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "RiemaLabs" }]
keywords = ["agent-skills", "static-analysis", "security", "souffle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.scripts]
semia = "semia_cli.main:main"

[project.urls]
Homepage = "https://github.com/RiemaLabs/semia-skillscan"
Issues = "https://github.com/RiemaLabs/semia-skillscan/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".cache",
    ".venv",
    "build",
    "dist",
    ".semia",
    "output",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — formatter handles wrapping
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
